tests/error/call_to_non_function.ca

def main()
    namespace ns

    ns()

stack = make_stack()
stack.stack_push(main.block, [])
stack.run

assert(stack.errored)
assert(stack.error_message == 'Unknown function: ns')
